syntax = "proto3";

import "google/protobuf/empty.proto";

package com.ncirl.robot; // I need to specify the package

option java_multiple_files = true;
option java_package = "com.ncirl.robot";
option java_outer_classname = "RobotServiceProto";

service RobotService {

  rpc getCurrentRobotStatus (google.protobuf.Empty) returns (UnaryRobotStatusResponse);

  rpc streamRobotStatus (stream StreamRobotStatusRequest) returns (StreamRobotStatusResponse);

  rpc bidirectionalStream(stream BidirectionalRequest) returns (stream BidirectionalResponse);

}

message UnaryRobotStatusResponse {

  string robotName = 1;
  string robotStatus = 2;
  int32 robotBatteryLevel = 3;
}

message StreamRobotStatusRequest {
  string robotName = 1;
  string dateTime = 2;
}

message StreamRobotStatusResponse {
  string message = 1;
}

message BidirectionalRequest {
  string message = 1;
}

message BidirectionalResponse {
  string message = 1;
}




