syntax = "proto3";

import "google/protobuf/empty.proto";

package com.ncirl.storage;

option java_multiple_files = true;
option java_package = "com.ncirl.storage";
option java_outer_classname = "StorageServiceProto";

service StorageService {
  rpc getCurrentStorageStatus(google.protobuf.Empty) returns (UnaryStorageStatusResponse);
}

message UnaryStorageStatusResponse {
  repeated StorageStatus storageStatusList = 1;
}

message StorageStatus {
  int32 storageId = 1;
  string storageStatus = 2;
}
